# RUST-web-development-Fixed

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  start_frontend.bat
Backend/: Cargo.toml  Dockerfile
Backend/migrations/: 20240611034020_create_users.sql
Backend/src/: api.rs  main.rs
Frontend/: Cargo.toml  Dockerfile  index.html  style.css
Frontend/src/: lib.rs  main.rs
migrations/: 20240611034020_create_users.sql
src/: question_list.rs
