[package]
name = "testdb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "migrate"] }
dotenv = "0.15.0"
tower-http = { version = "0.3", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.2"
