[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3.69", features = ["HtmlTextAreaElement"] }
yew = { version = "0.21.0", features = ["csr"] }
